@@ -1,0 +1,98 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="context/main_template/macros/master"
+      i18n:domain="plone">
+<body>
+
+  <hidden metal:fill-slot="content-title">
+  </hidden>
+
+  <hidden metal:fill-slot="content-description">
+  </hidden>
+
+  <metal:content-core fill-slot="content-core">
+
+  <div class="content-wrapper">
+
+    <main role="main" id="main-container">
+
+      <div class="sec-page-detail">
+        <div class="container">
+          <div class="row">
+
+            <nav class="toc">
+
+              <section class="nav-list">
+                <h2>Inhoudsopgave</h2>
+                <ul>
+                  <li><a href="#">Over de Minaraad</a></li>
+                  <li><a href="#">Decretale grondslag</a></li>
+                  <li><a href="#">Taakstelling</a></li>
+                </ul>
+              </section>
+
+            </nav>
+
+            <article class="article-page-detail">
+
+              <div class="body">
+                <section>
+                  <header>
+                    <h1 tal:content="context/Title">Over de Minaraad</h1>
+                  </header>
+                  <div class="lead">
+                    <metal:field use-macro="python:context.widget('text', mode='view')">
+                        Body text
+                    </metal:field>
+                  </div>
+                </section>
+              </div>
+
+            </article>
+
+            <nav class="sub-nav">
+              <section class="nav-list">
+                <h2>Over de Minaraad</h2>
+                <ul>
+                  <li class="" tal:repeat="item context/@@helpers/submenu_items"
+                      tal:attributes="class item/css_class|nothing">
+                    <a href="#"
+                       tal:attributes="href item/url"
+                       tal:content="item/title">Dagelijksbestuur</a></li>
+                </ul>
+              </section>
+
+              <article class="article-vision">
+                <a href="#">
+                  <header>
+                    <h3>
+                      <i class="fa fa-bullseye"></i>
+                      Jaarwerking
+                    </h3>
+                  </header>
+                  <div class="body">
+                    <p>
+                      Quisque ut dolor gravida, placerat libero vel,
+                      euismod. Excepteur sint obcaecat cupiditat non
+                      proident culpa.
+                    </p>
+                  </div>
+                </a>
+              </article>
+
+            </nav>
+
+          </div>
+        </div>
+      </div>
+
+    </main>
+  </div> <!-- content-wrapper -->
+  </metal:content-core>
+
+</body>
+</html>
+
