@@ -1,0 +1,2 @@
+[default]
+title=View Document
